# queue-system-api

./: .coafile  .flake8  .gitignore  .pylintrc  .yamllint  LICENSE  Makefile  README.md  analyzer.py  api.py  create_configuration.py  grapher.py  main.py  migrate.py  package-lock.json  package.json  priority_checker.py  pyproject.toml  simulate.sh  simulator.py  simulator_old.py  tailwind.config.js  update_css.sh
assets/api/: models.py
assets/api/endpoints/: Client.py  Queue.py  Status.py
assets/api/views/: Client.py  Status.py
assets/classes/: Client.py  ClientClass.py  OrderedSet.py  Queue.py  QueueClass.py
assets/classes/api/endpoints/: Lobby.py  Status.py
assets/classes/data/: OrderedSet.py
assets/classes/dto/: Node.py  OrderedSet.py
assets/config/: config.yaml
assets/dashboard/: dash.py
assets/dashboard/templates/: base.html
assets/helpers/: generators.py  initiator.py  loaders.py
smart_queue/: __init__.py
smart_queue/analysis/: __init__.py
smart_queue/analysis/classes/: Condition.py  Patient.py  Queue.py  Stats.py  store.py
smart_queue/analysis/configurations/: generator.py
smart_queue/apps/: __init__.py
smart_queue/apps/client/: models.py  views.py
smart_queue/apps/conditions/: models.py  views.py
smart_queue/apps/dashboard/: __init__.py  routes.py
smart_queue/apps/dashboard/templates/: base.html
smart_queue/apps/queue/: models.py  views.py
smart_queue/config/: sampley_conf.yaml
smart_queue/db/: __init__.py  database.py
smart_queue/db/helpers/: autocommit.py
smart_queue/db/queries/: queries.sql  schema.sql
(+7 files in other folders)
