[tool.poetry]
name = "queue-system"
version = "0.1.0"
description = ""
authors = ["1orange <orangel33t@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
