[tool.poetry]
name = "queue-system"
version = "0.1.0"
description = ""
authors = ["1orange <orangel33t@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pendulum = "^2.1.2"
Flask = "^2.0.2"
addict = "^2.4.0"
PyYAML = "^6.0"
Flask-RESTful = "^0.3.9"
autopep8 = "^1.6.0"
flask-apispec = "^0.11.0"
marshmallow = "^3.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
